<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/footer_btn1"
        android:text="@string/scroll_footer_1"
        style="@style/style_vertical_button"/>

    <Button
        android:id="@+id/footer_btn2"
        android:visibility="gone"
        android:text="@string/scroll_footer_2"
        style="@style/style_vertical_button"/>

    <Button
        android:id="@+id/footer_btn3"
        android:visibility="gone"
        android:text="@string/scroll_footer_3"
        style="@style/style_vertical_button"/>
</LinearLayout>